# NeMo-Guardrails

./: CONTRIBUTING.md  Makefile  pyproject.toml
.github/workflows/: docs-build-pr.yaml  docs-build.yaml  docs-preview-pr.yaml
docs/: Dockerfile  README.md  conf.py  configuration.rst  getting-started.md  index.md  project.json  pyproject.toml  release-notes.md  versions1.json
docs/colang/: conf.py  index.md
docs/community/: conf.py  index.md  project.json
docs/evaluation/: README.md
docs/getting-started/5-output-rails/: README.md
docs/review/: conf.py  index.md
docs/user-guides/: configuration-guide.md  guardrails-library.md
docs/user-guides/advanced/: nemotron-safety-guard-deployment.md  streaming.md
examples/configs/injection_detection/: demo.py
examples/configs/injection_detection/config/: config.yml
