[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.12"
toml = "^0.10.2"
sphinx-reredirects = "<0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "<=7.5"
myst-parser = "<=5"
sphinx-copybutton = "<=0.6"
nvidia-sphinx-theme = "*"
